--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,17 @@
 spring.application.name=floresMedicApp
+# MySQL Database Configuration
+spring.datasource.url=jdbc:mysql://localhost:3306/clinic_db?useSSL=false&serverTimezone=America/Lima
+spring.datasource.username=root  
+spring.datasource.password=123456
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# JPA/Hibernate Configuration
+spring.jpa.hibernate.ddl-auto=update # 'update' will create/update tables based on entities.
+                                      # Use 'create' to drop and recreate on every startup (good for dev, deletes data).
+                                      # Use 'none' for production and manage schema manually.
+spring.jpa.show-sql=true 
+spring.jpa.properties.hibernate.format_sql=true 
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+# Server Port
+server.port=8080
